tests/ui/struct_bad_duration.stderr
error: invalid duration "not-a-duration": failed to parse input in the "friendly" duration format: expected duration to start with a unit value (a decimal integer) after an optional sign, but no integer was found
 --> tests/ui/struct_bad_duration.rs:6:32
  |
6 | #[service(inactivity_timeout = "not-a-duration")]
  |                                ^^^^^^^^^^^^^^^^
